# ndefender-backend-aggregator

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  development.yaml
docs/: API.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CORS.md  DEPLOYMENT.md  INTEGRATION.md  INTEGRATION_CONTRACTS.md  JSONL_GROUND_TRUTH.md  OPERATIONS.md  PUBLIC_API_DEPLOYMENT.md  PUBLIC_TEST_MODE.md  SECURITY.md  WS_PUBLIC_ACCESS.md
reports/: GREEN_SIGNAL_20260222_142140.md  GREEN_SIGNAL_20260222_152418.md  GREEN_SIGNAL_20260225_183929.md  GREEN_SIGNAL_20260225_184622.md  GREEN_SIGNAL_LIVE_DATA.md  GREEN_SIGNAL_LIVE_DATA_2.md  GREEN_SIGNAL_REMOTEID_FPV_VIDEO.md  GREEN_SIGNAL_RF_REMOTEID.md  README_GREEN_SIGNAL.md  RELEASE_v0.1.2.md  diagnostics_20260222_141936.json  diagnostics_20260222_141936.md  diagnostics_20260222_141943.json  diagnostics_20260222_141943.md  green_signal.json
src/ndefender_backend_aggregator/: __init__.py  auth.py  bus.py  config.py  contacts.py  logging.py  (+8 more)
tests/: conftest.py  test_antsdr_ingest.py  test_api_endpoints.py  test_bus.py  test_command_router.py  test_config_load.py  test_contacts.py  test_esp32_ingestor.py  test_ingest_contracts.py  test_integration_stubs.py  test_jsonl_tailer_rotation.py  test_models.py  test_remoteid_ingest.py  test_runtime_orchestrator.py  test_system_commands.py
tools/: jsonl_tail_test_driver.py  run_full_diagnostics.py  verify_public_rest_fix.py  ws_contract_check.py  ws_local_test.py  ws_public_test.py
ui_contract_stubs/: README.md  client.ts
(+17 files in other folders)
