[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndefender-backend-aggregator"
version = "0.1.0"
description = "Unified control plane for N-Defender subsystems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "N-Defender" }]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pyserial>=3.5",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
